test_case/rust-lang_rust/31481_181144577.rs
 rust
extern "C" fn foo(x: u8); // error: expected one of `->`, `where`, or `{`, found `;`
